final fixes to ecommerce

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -81,6 +81,10 @@
     }
 }
 
+.ecomproductslist__listing-title {
+    text-align: center;
+}
+
 .ecomproduct__image-link {
     background: no-repeat;
 }
@@ -341,6 +345,10 @@
 
 .ecomproductslist__form {
     border: 0;
+}
+
+.ecomproductslist__listing-order {
+    clear: both;
 }
 
 // Search Button
