--- a/less/widgets.less
+++ b/less/widgets.less
@@ -239,9 +239,12 @@
 // ---------------
 
 .feature__headline {
+    max-width: 70%;
+    margin: 0px auto;
     @media @tablet {
         font-size: bkscale(@font-swatch8-font-size,0.8);
         line-height: bkscale(@font-swatch8-line-height,0.8);
+        max-width: 100%;
     }
     @media @mobile {
         font-size: bkscale(@font-swatch8-font-size,0.7);
@@ -250,9 +253,12 @@
 }
 
 .feature__strapline {
+    max-width: 70%;
+    margin: 0px auto;
     @media @tablet {
         font-size: bkscale(@font-swatch9-font-size,0.9);
         line-height: bkscale(@font-swatch9-line-height,0.9);
+        max-width: 100%;
     }
     @media @mobile {
         font-size: bkscale(@font-swatch9-font-size,0.8);
