--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -136,6 +136,8 @@ hr {
 	border: 1px solid @color-swatch7;
 	padding: 30px 20px;
 	text-align: center;
+    max-width: 700px;
+    margin: 0px auto;
 }
 
 .blogpost__sharing-links {
