ecommerce titles after styling

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -78,9 +78,17 @@
         width: 5%;
         margin-top: 20px;
         margin-bottom: 10px;
+        @media @tablet {
+            margin: 20px auto 15px;
+        }
     }
     @media @tablet {
         text-align: center;
+    }
+}
+
+.ecomfeaturedproducts__listing-title {
+    &:after {
         margin: 20px auto 15px;
     }
 }
