--- a/less/widgets.less
+++ b/less/widgets.less
@@ -682,7 +682,7 @@ button, .button {
     padding: 8px 30px;
     background-color: transparent;
     border: 1px solid @color-swatch4;
-    color: @color-swatch4;
+    color: @font-swatch7-color;
 }
 
 .feature__button {
