DT-1742 Allow wrapping of long items in navigation's folders

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -88,6 +88,7 @@
 .navigation-list--children, .default-page .navigation-list--children {
 	background-color:@color-swatch1;
 	border: 1px solid @color-swatch7;
+    white-space: wrap;
 	.navigation__item-name {
 		color:@font-swatch9-color;
 	}
