Attempt to fix "double" tap on Windows Mobile

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -37,6 +37,11 @@
 // Navigation Link
 .navigation-item .item-name {
 	padding:5px 15px;
+    &:hover {
+        @media @tablet {
+            color: @font-swatch6-color;
+        }
+    }
 }
 
 .item-name {
