--- a/layout.twig
+++ b/layout.twig
@@ -45,11 +45,11 @@
                 $( ".bk-extendednavigation" ).toggleClass( "open" );
             });
             // Togglse class open to display/hide folders
-           $( ".navigation-item.folder .item-name--parent" ).each(function() {
-                $( this ).click(function() {
-                        $( this ).parent( ".navigation-item.folder" ).toggleClass( "open" );
-                });
-            });
+           // $( ".navigation-item.folder .item-name--parent" ).each(function() {
+           //      $( this ).click(function() {
+           //              $( this ).parent( ".navigation-item.folder" ).toggleClass( "open" );
+           //      });
+           //  });
         </script>
 
 </body>
