--- a/less/navigation.less
+++ b/less/navigation.less
@@ -102,7 +102,8 @@
 		position: relative;
 		top: 0;
 		.navigation-item:hover & {
-			display: none;
+            display: block;
+			// display: none;
 		}
 		.navigation-item.open & {
 			display: block;
