--- a/stylesheet.less
+++ b/stylesheet.less
@@ -23,15 +23,15 @@
 //    your template to guarentee widgets come to life. Proivides default styles for all widgets.
 
 // Template Includes
-@import "@{templateLocal}/less/theme.less"; // Theme
-@import "@{templateLocal}/less/widgets.less"; // Widgets
+// @import "@{templateLocal}/less/theme.less"; // Theme
+// @import "@{templateLocal}/less/widgets.less"; // Widgets
 @import "@{templateLocal}/less/mixins.less"; // Mixins
 //@import "@{templateLocal}/less/navigation.less"; // Navigation
 
 // Plugin Includes
-@import "@{templateLocal}/less/plugins/plugin-blog.less"; // Plugin: Blog CSS
-@import "@{templateLocal}/less/plugins/plugin-menu.less"; // Plugin: Menu CSS
-@import "@{templateLocal}/less/plugins/plugin-ecommerce.less"; // Plugin: Ecommerce CSS
+// @import "@{templateLocal}/less/plugins/plugin-blog.less"; // Plugin: Blog CSS
+// @import "@{templateLocal}/less/plugins/plugin-menu.less"; // Plugin: Menu CSS
+// @import "@{templateLocal}/less/plugins/plugin-ecommerce.less"; // Plugin: Ecommerce CSS
 
 
 
