--- a/layout.twig
+++ b/layout.twig
@@ -35,6 +35,8 @@
     {% include basekit.bodyScript %}
 
 
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="{{ asset('libs/jquery-1.10.2.min.js')}}"><\/script>')</script>
 
     	<!-- Nav Menu Script -->
 
