--- a/stylesheet.less
+++ b/stylesheet.less
@@ -17,16 +17,16 @@
 // 1. #LESS Includes
 // -----------------------------
 
-@import "@{templateCommon}/bk-less-framework.less"; // BaseKit LESS Framework
+@import "@{templateCommon}/bk-less-framework.less"; // BaseKit LESS Framework 
 
-// ** BaseKit LESS Framework is a set of non obtrusive LESS files that can be pulled into
+// ** BaseKit LESS Framework is a set of non obtrusive LESS files that can be pulled into 
 //    your template to guarentee widgets come to life. Proivides default styles for all widgets.
 
 // Template Includes
 @import "@{templateLocal}/less/theme.less"; // Theme
 @import "@{templateLocal}/less/widgets.less"; // Widgets
 @import "@{templateLocal}/less/mixins.less"; // Mixins
-//@import "@{templateLocal}/less/navigation.less"; // Navigation
+@import "@{templateLocal}/less/navigation.less"; // Navigation
 
 // Plugin Includes
 @import "@{templateLocal}/less/plugins/plugin-blog.less"; // Plugin: Blog CSS
@@ -110,7 +110,7 @@
     display: -moz-box;
     display: -ms-flexbox;
     display: -webkit-flex;
-    display: flex;
+    display: flex;    
     min-height: 100vh;
     flex-direction: column;
      -webkit-flex-direction: column;
