Revert "Attempt to fix "double" tap on Windows Mobile - 2"
This reverts commit a2299968d835181db1782b399bfd0ea37264afa4.

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -91,10 +91,6 @@
 	}
 }
 
-.navigation-list--children {
-    display: block;
-}
-
 .navigation-list--children, .default-page .navigation-list--children {
 	background-color:@color-swatch1;
 	border: 1px solid @color-swatch7;
@@ -105,9 +101,6 @@
 	@media @tablet {
 		position: relative;
 		top: 0;
-        .navigation-item {
-            display: block;
-        }
 		.navigation-item:hover & {
             display: block;
 			// display: none;
@@ -215,8 +208,7 @@
         }
     }
     .navigation-body {
-        // display: none;
-        display: block;
+        display: none;
         .open & {
             display: block;
         }
