--- a/less/navigation.less
+++ b/less/navigation.less
@@ -33,10 +33,9 @@
 	}
 }
 
-
 // Navigation Link
 .navigation-item .item-name {
-	padding:5px 15px;
+	padding: 5px 15px;
 }
 
 .item-name {
@@ -68,11 +67,12 @@
 		-moz-transition: all 0.2s ease;
 		-o-transition: all 0.2s ease;
 		transition: all 0.2s ease;
+        border-top-color: @color-swatch1;
 		@media @tablet {
 			content: "\f054";
 			font-size: 0.8em;
-			height: 31px;
-			margin-top: -2px;
+			 height: 30px;
+            margin-top: -9px;
 		}
 		.navigation-item.open & {
 			@media @tablet {
