--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -141,7 +141,7 @@
 // Basket Buttons
 .js-ecom-product-add-to-cart-btn {
     background-color: @color-swatch3;
-    color: @font-swatch8-color;
+    color: @color-swatch1!important;
     margin: 20px 0;
 }
 
@@ -320,7 +320,9 @@
     max-width: 140px;
 }
 
-
+.ecombasket button.button {
+    color: @color-swatch1;
+}
 
 
 // -------------------------------
