--- a/stylesheet.less
+++ b/stylesheet.less
@@ -127,6 +127,9 @@
     width: 100%;
 }
 
+
+
+
 // -----------------------------
 // 3. #Template Styles
 // -----------------------------
@@ -142,3 +145,12 @@
 .widget--zone-widget {
     margin: 0 0 10px;
 }
+
+
+
+
+// -----------------------------
+// 4. #Variables 
+// -----------------------------
+
+@import "@{templateLocal}/less/variables.less"; 
