--- a/stylesheet.less
+++ b/stylesheet.less
@@ -135,8 +135,8 @@
 // -----------------------------
 
 .template-content {
-	width:100%;
-	margin:0px auto;
+	width: 00%;
+	margin: 0px auto;
 	@media @tablet {
 		width:100%;
 	}
@@ -153,4 +153,5 @@
 // 4. #Variables 
 // -----------------------------
 
+@import "@{templateLocal}/bk-v8-test.less"; 
 @import "@{templateLocal}/less/variables.less"; 
