--- a/includes/footer.twig
+++ b/includes/footer.twig
@@ -2,6 +2,7 @@
 <footer class="template-footer">
 
 	<div class="container">
+        {{widget('profile', 'footerprofilesocialicons', { 'profileType':'socialicons', 'socialicons':'profile'})|raw}}
         {{widget('profile', 'footerprofilecopyright', { 'profileType':'copyright', 'copyright':'profile'})|raw}}
 	</div>
 
