--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -141,7 +141,7 @@
 // Basket Buttons
 .js-ecom-product-add-to-cart-btn {
     background-color: @color-swatch3;
-    color: @color-swatch1!important;
+    color: @font-swatch8-color;
     margin: 20px 0;
 }
 
@@ -320,9 +320,7 @@
     max-width: 140px;
 }
 
-.ecombasket button.button {
-    color: @color-swatch1;
-}
+
 
 
 // -------------------------------
