--- a/bk-v8-test.less
+++ b/bk-v8-test.less
@@ -1,19 +1,13 @@
 @color__primary:@color-swatch3;
-@color__secondary:@color-swatch1;
-@color__body--background:@color__secondary;
-@color__container--background:@color__secondary;
+@color__secondary:@color-swatch2;
+@color__body--background:@color-swatch1;
 @color__link--text:@color-swatch2;
 @color__companyname--text:@color-swatch4;
-@color__h1--text:@color-swatch4;
-@color__h1--background:transparent;
-@color__h2--text:@color-swatch4;
-@color__h2--background:transparent;
-@color__h3--text:@color-swatch4;
-@color__h3--background:transparent;
-@color__h4--text:@color-swatch4;
-@color__h4--background:transparent;
-@color__p--text:@color-swatch5;
-@color__p--background:transparent;
+@color__h1--text:@font-swatch4-color;
+@color__h2--text:@font-swatch4-color;
+@color__h3--text:@font-swatch4-color;
+@color__h4--text:@font-swatch4-color;
+@color__p--text:@font-swatch5-color;
 @color__button--background:@transparent;
 @color__button--background--hover:@color__primary;
 @color__button--text:@color-swatch4;
