--- a/bk-v8-test.less
+++ b/bk-v8-test.less
@@ -2,90 +2,85 @@
 @color__secondary:@color-swatch2;
 @color__body--background:@color-swatch1;
 @color__link--text:@color-swatch2;
-@color__companyname--text:@color-swatch4;
-@color__h1--text:@font-swatch4-color;
-@color__h2--text:@font-swatch4-color;
-@color__h3--text:@font-swatch4-color;
+@color__companyname--text:@font-swatch10-color;;
+@color__h1--text:@font-swatch1-color;
+@color__h2--text:@font-swatch2-color;
+@color__h3--text:@font-swatch3-color;
 @color__h4--text:@font-swatch4-color;
 @color__p--text:@font-swatch5-color;
 @color__button--background:@transparent;
 @color__button--background--hover:@color__primary;
-@color__button--text:@color-swatch4;
+@color__button--text:@font-swatch7-color;
 @color__button--text--hover:@color-swatch1;
 @color__header--background:@color-swatch1;
 @color__footer--background:@color__primary;
 @color__sidebar--background:@color-swatch2;
 @color__navigation--background:@color-swatch1;
-@color__navigation--text:@color-swatch6;
+@color__navigation--text:@font-swatch6-color;
 @color__navigation--text--hover:@color__primary;
 @color__navigation--text--selected:@color__primary;
 @color__navigation-list--background:@color-swatch1;
-@color__navigation-item--text:@color-swatch6;
+@color__navigation-item--text:@font-swatch6-color;
 @color__navigation-item--selected:@color__primary;
 @color__feature--background:@color-swatch4;
-@color__feature-content--background:transparent;
 @color__feature-headline--text:@color-swatch1;
-@color__feature-headline--background:transparent;
 @color__feature-strapline--text:@color-swatch1;
-@color__feature-strapline--background:transparent;
 @color__feature-button--text:@color-swatch1;
 @color__feature-button--background:transparent;
 @color__feature-button--background--hover:@color__primary;
 @color__form--background:transparent;
-@color__form-legend--text:@color-swatch4;
+@color__form-legend--text:@font-swatch4-color;
 @color__form-legend--background:transparent;
-@color__form-label--text:@color-swatch5;
+@color__form-label--text:@font-swatch5-color;
 @color__image--background:transparent;
 @color__image-caption--background:lighten(@color-swatch1, 5%);
-@color__image-title--text:@color-swatch4;
-@color__image-description--text:@color-swatch4;
+@color__image-title--text:@font-swatch4-color;
+@color__image-description--text:@font-swatch5-color;
 @color__gallery--background:lighten(@color-swatch1, 5%);
 @color__gallery-caption--background:@color-swatch5;
-@color__gallery-title--text:lighten(@color-swatch1, 30%);
-@color__gallery-description--text:lighten(@color-swatch1, 30%);
+@color__gallery-title--text:@color-swatch1;
+@color__gallery-description--text:@color-swatch1;
 @color__slideshow--background:transparent;
 @color__slideshow-caption--background:@color-swatch5;
 @color__slideshow-title--text:@color-swatch1;
 @color__slideshow-description--text:@color-swatch1;
 @color__slideshow-pagination-item--background:transparent;
 @color__slideshow-pagination-item--background--selected:@color__secondary;
-@color__slideshow-pagination-item--text:@color-swatch4;
+@color__slideshow-pagination-item--text:@font-swatch4-color;
 @color__slideshow-pagination-item--text--hover:@color-swatch1;
 @color__twitter--background:transparent;
 @color__twitter-item--background:transparent;
-@color__twitter-account-name--background:@color__primary;
+@color__twitter-account-name--background:@font-swatch4-color;
 @color__socialicons--icon:@color__primary;
 @color__socialicons--icon--hover:@color-swatch1;
 @color__socialicons--icon--background:transparent;
-@color__socialicons--text:@color__secondary;
+@color__socialicons--text:@font-swatch4-color;
 @color__blogsearch--background:transparent;
 @color__blogsearch-legend--background:transparent;
-@color__blogsearch-legend--text:@color-swatch4;
-@color__blogsearch-label--text:@color-swatch4;
+@color__blogsearch-legend--text:@font-swatch4-color;
+@color__blogsearch-label--text:@font-swatch4-color;
 @color__blogpostlist--background:transparent;
 @color__blogpostlist-article--background:transparent;
 @color__blogpostlist-title--background:transparent;
-@color__blogpostlist-title--text:@color__primary;
+@color__blogpostlist-title--text:@font-swatch4-color;
 @color__blogpost--background:transparent;
 @color__blogpost-article--background:transparent;
 @color__blogpost-title--background:transparent;
-@color__blogpost-title--text:@color-swatch4;
+@color__blogpost-title--text:@font-swatch4-color;
 @color__ecomproductslist--background:transparent;
 @color__ecomproductslist-filters--background:transparent;
 @color__ecomproductslist-legend--background:transparent;
-@color__ecomproductslist-legend--text:@color-swatch4;
-@color__ecomproductslist-label--text:@color-swatch4;
+@color__ecomproductslist-legend--text:@font-swatch4-color;
+@color__ecomproductslist-label--text:@font-swatch4-color;
 @color__ecomproductslist-product-list--background:transparent;
 @color__ecomproductslist-product-item--background:transparent;
 @color__ecomproductslist-product-title--background:transparent;
-@color__ecomproductslist-product-title--text:@color__primary;
+@color__ecomproductslist-product-title--text:@font-swatch4-color;
 @color__ecomproduct--background:transparent;
 @color__ecomproduct-images--background:darken(@color-swatch1,5%);
 @color__ecomproduct-content--background:transparent;
-@color__ecomproduct-title--background:transparent;
-@color__ecomproduct-title--text:@color-swatch4;
-@color__ecomproduct-price--background:transparent;
-@color__ecomproduct-price--text:@color-swatch4;
+@color__ecomproduct-title--text:@font-swatch4-color;
+@color__ecomproduct-price--text:@font-swatch4-color;
 @color__ecombasket--background:transparent;
 @color__ecombasket-list--background:transparent;
 @color__ecombasket-button--background:@color__primary;
