general update on colour swatches

--- a/bk-v8-test.less
+++ b/bk-v8-test.less
@@ -23,8 +23,8 @@
 @color__navigation-item--text:@font-swatch6-color;
 @color__navigation-item--selected:@color__primary;
 @color__feature--background:@color-swatch4;
-@color__feature-headline--text:@color-swatch1;
-@color__feature-strapline--text:@color-swatch1;
+@color__feature-headline--text:@font-swatch8-color;
+@color__feature-strapline--text:@font-swatch9-color;
 @color__feature-button--text:@color-swatch1;
 @color__feature-button--background:transparent;
 @color__feature-button--background--hover:@color__primary;
