social icons text hover

--- a/less/variables.less
+++ b/less/variables.less
@@ -179,6 +179,10 @@ form,
 	}
 }
 
+.socialicons__social-item a:hover {
+	color: @color__socialicons--icon--hover;
+}
+
 .blogsearch {
 	background-color: @color__blogsearch--background;
 	&__legend.legend {
