--- a/bk-v8-test.less
+++ b/bk-v8-test.less
@@ -1,20 +1,27 @@
 @color__primary:@color-swatch3;
 @color__secondary:@color-swatch2;
+
 @color__body--background:@color-swatch1;
 @color__link--text:@color-swatch2;
-@color__companyname--text:@font-swatch10-color;;
+@color__companyname--text:@font-swatch10-color;
+
 @color__h1--text:@font-swatch1-color;
 @color__h2--text:@font-swatch2-color;
 @color__h3--text:@font-swatch3-color;
 @color__h4--text:@font-swatch4-color;
 @color__p--text:@font-swatch5-color;
+
 @color__button--background:@transparent;
 @color__button--background--hover:@color__primary;
 @color__button--text:@font-swatch7-color;
 @color__button--text--hover:@color-swatch1;
+
 @color__header--background:@color-swatch1;
+
 @color__footer--background:@color__primary;
+
 @color__sidebar--background:@color-swatch2;
+
 @color__navigation--background:@color-swatch1;
 @color__navigation--text:@font-swatch6-color;
 @color__navigation--text--hover:@color__primary;
@@ -22,36 +29,44 @@
 @color__navigation-list--background:@color-swatch1;
 @color__navigation-item--text:@font-swatch6-color;
 @color__navigation-item--selected:@color__primary;
+
 @color__feature--background:@color-swatch4;
 @color__feature-headline--text:@font-swatch8-color;
 @color__feature-strapline--text:@font-swatch9-color;
 @color__feature-button--text:@color-swatch1;
 @color__feature-button--background:transparent;
 @color__feature-button--background--hover:@color__primary;
+
 @color__form-legend--text:@font-swatch4-color;
 @color__form-label--text:@font-swatch4-color;
+
 @color__image-caption--background:lighten(@color-swatch1, 5%);
 @color__image-title--text:@font-swatch4-color;
 @color__image-description--text:@font-swatch5-color;
+
 @color__gallery-caption--background:@color-swatch5;
 @color__gallery-title--text:@color-swatch1;
 @color__gallery-description--text:@color-swatch1;
+
 @color__slideshow-caption--background:@color-swatch5;
 @color__slideshow-title--text:@color-swatch1;
 @color__slideshow-description--text:@color-swatch1;
-@color__slideshow-pagination-item--background:transparent;
+@color__slideshow-pagination-item--background:@color-swatch1;
 @color__slideshow-pagination-item--background--selected:@color__secondary;
 @color__slideshow-pagination-item--text:@font-swatch4-color;
 @color__slideshow-pagination-item--text--hover:@color-swatch1;
+
 @color__twitter-account-name--background:@font-swatch4-color;
+
 @color__socialicons--icon:@color__primary;
 @color__socialicons--icon--hover:@color-swatch1;
 @color__socialicons--text:@font-swatch4-color;
+
 @color__blogsearch-legend--text:@font-swatch4-color;
 @color__blogsearch-label--text:@font-swatch4-color;
 @color__blogpostlist-title--text:@font-swatch4-color;
-@color__blogpost--background:transparent;
 @color__blogpost-title--text:@font-swatch4-color;
+
 @color__ecomproductslist-legend--text:@font-swatch4-color;
 @color__ecomproductslist-label--text:@font-swatch4-color;
 @color__ecomproductslist-product-title--text:@font-swatch4-color;
@@ -61,4 +76,5 @@
 @color__ecombasket-button--background:@color__primary;
 @color__ecombasket-button--background--hover:darken(@color__primary, 10%);
 @color__ecombasket-button--text:@color-swatch1;
+
 @color__menu-item--background:@color-swatch1;
