--- a/bk-v8-test.less
+++ b/bk-v8-test.less
@@ -56,14 +56,25 @@
 @color__slideshow-pagination-item--text:@font-swatch4-color;
 @color__slideshow-pagination-item--text--hover:@color-swatch1;
 
+@color__twitter--background:transparent;
+@color__twitter-item--background:transparent;
+@color__twitter-account-name--background:transparent;
+
 @color__socialicons--icon:@color__primary;
 @color__socialicons--icon--hover:@color-swatch1;
 @color__socialicons--text:@font-swatch4-color;
 
+@color__blogsearch--background:@color-swatch1;
 @color__blogsearch-legend--text:@font-swatch4-color;
 @color__blogsearch-label--text:@font-swatch4-color;
+
+@color__blogpostlist--background:transparent;
 @color__blogpostlist-title--text:@font-swatch4-color;
 @color__blogpost-title--text:@font-swatch4-color;
+
+@color__blogpost--background:transparent;
+@color__blogpost-article--background:transparent;
+@color__blogpost-title--text:@color-swatch4;
 
 @color__ecomproductslist-legend--text:@font-swatch4-color;
 @color__ecomproductslist-label--text:@font-swatch4-color;
@@ -75,4 +86,8 @@
 @color__ecombasket-button--background--hover:darken(@color__primary, 10%);
 @color__ecombasket-button--text:@color-swatch1;
 
+@color__menusections--background:transparent;
+@color__menu--background:transparent;
 @color__menu-item--background:@color-swatch1;
+@color__menu-section-header--background:transparent;
+@color__menu-section-featured--background:transparent;
