added background variables

--- a/bk-v8-test.less
+++ b/bk-v8-test.less
@@ -68,17 +68,20 @@
 @color__blogsearch-legend--text:@font-swatch4-color;
 @color__blogsearch-label--text:@font-swatch4-color;
 
-@color__blogpostlist--background:transparent;
+@color__blogpostlist--background:@color-swatch1;
 @color__blogpostlist-title--text:@font-swatch4-color;
 @color__blogpost-title--text:@font-swatch4-color;
 
-@color__blogpost--background:transparent;
-@color__blogpost-article--background:transparent;
+@color__blogpost--background:@color-swatch1;
+@color__blogpost-article--background:@color-swatch1;
 @color__blogpost-title--text:@color-swatch4;
 
+@color__ecomproductslist--background:@color-swatch1;
+@color__ecomproductslist-filters--background:@color-swatch1;
 @color__ecomproductslist-legend--text:@font-swatch4-color;
 @color__ecomproductslist-label--text:@font-swatch4-color;
 @color__ecomproductslist-product-title--text:@font-swatch4-color;
+@color__ecomproductslist-product-item--background:@color-swatch1;
 @color__ecomproduct-images--background:darken(@color-swatch1,5%);
 @color__ecomproduct-title--text:@font-swatch4-color;
 @color__ecomproduct-price--text:@font-swatch4-color;
@@ -86,8 +89,8 @@
 @color__ecombasket-button--background--hover:darken(@color__primary, 10%);
 @color__ecombasket-button--text:@color-swatch1;
 
-@color__menusections--background:transparent;
-@color__menu--background:transparent;
+@color__menusections--background:@color-swatch1;
+@color__menu--background:@color-swatch1;
 @color__menu-item--background:@color-swatch1;
-@color__menu-section-header--background:transparent;
-@color__menu-section-featured--background:transparent;
+@color__menu-section-header--background:@color-swatch1;
+@color__menu-section-featured--background:@color-swatch1;
