--- a/bk-v8-test.less
+++ b/bk-v8-test.less
@@ -56,9 +56,7 @@
 @color__slideshow-pagination-item--text:@font-swatch4-color;
 @color__slideshow-pagination-item--text--hover:@color-swatch1;
 
-@color__twitter--background:transparent;
-@color__twitter-item--background:transparent;
-@color__twitter-account-name--background:transparent;
+@color__twitter--background:@color-swatch1;
 
 @color__socialicons--icon:@color__primary;
 @color__socialicons--icon--hover:@color-swatch1;
