--- a/bk-v8-test.less
+++ b/bk-v8-test.less
@@ -11,7 +11,7 @@
 @color__h4--text:@font-swatch4-color;
 @color__p--text:@font-swatch5-color;
 
-@color__button--background:@transparent;
+@color__button--background:transparent;
 @color__button--background--hover:@color__primary;
 @color__button--text:@font-swatch7-color;
 @color__button--text--hover:@color-swatch1;
@@ -22,7 +22,6 @@
 
 @color__sidebar--background:@color-swatch2;
 
-@color__navigation--background:@color-swatch1;
 @color__navigation--text:@font-swatch6-color;
 @color__navigation--text--hover:@color__primary;
 @color__navigation--text--selected:@color__primary;
