--- a/less/variables.less
+++ b/less/variables.less
@@ -3,10 +3,6 @@ body {
 	background-color: @color__body--background;
 }
 
-.template-content {
-	background-color: @color__container--background;
-}
-
 .company-link {
 	color: @color__companyname--text;
 }
@@ -17,27 +13,22 @@ a {
 
 h1 {
 	color: @color__h1--text;
-	background-color: @color__h1--background;
 }
 
 h2 {
 	color: @color__h2--text;
-	background-color: @color__h2--background;
 }
 
 h3 {
 	color: @color__h3--text;
-	background-color: @color__h3--background;
 }
 
 h4 {
 	color: @color__h4--text;
-	background-color: @color__h4--background;
 }
 
 p {
 	color: @color__p--text;
-	background-color: @color__p--background;
 }
 
 button,
@@ -46,6 +37,7 @@ button,
 	color: @color__button--text;
 	&:hover {
 		background-color: @color__button--background--hover;
+		color: @color__button--text--hover;
 	}
 }
 
@@ -62,32 +54,28 @@ button,
 }
 
 .extendednavigation {
-	background-color: transparent;
 	&__navigation-body {
-		background-color: transparent;
+		background-color: @color__navigation-list--background;
 	}
 	&__item-name.item-name {
-		color: darken(@color__navigation-item--text, 10%);
+		color: @color__navigation-item--text;
 		&:hover {
-			color: darken(@color__navigation-item--selected, 10%);
+			color: @color__navigation-item--selected;
 		}
 	}
 	&__navigation-item.selected {
-		color: darken(@color__navigation-item--selected, 10%);
+		color: @color__navigation-item--selected;
 	}
 }
 
 .feature {
 	background-color: @color__feature--background;
 	&__content-wrap {
-		background-color: @color__feature-content--background;
 	}
 	&__headline {
-		background-color: @color__feature-headline--background;
 		color: @color__feature-headline--text;
 	}
 	&__strapline {
-		background-color: @color__feature-strapline--background;
 		color: @color__feature-strapline--text;
 	}
 	&__button {
@@ -101,10 +89,8 @@ button,
 
 form,
 .form {
-	background-color: @color__form--background;
 	legend,
 	.legend {
-		background-color: @color__form-legend--background;
 		color: @color__form-legend--text;
 	}
 	label,
@@ -114,7 +100,6 @@ form,
 }
 
 .imagewidget {
-	background-color: @color__image--background;
 	&__caption {
 		background-color: @color__image-caption--background;
 	}
@@ -127,7 +112,6 @@ form,
 }
 
 .gallery {
-	background-color: @color__gallery--background;
 	&__caption.caption {
 		background-color: @color__gallery-caption--background
 	}
@@ -140,7 +124,6 @@ form,
 }
 
 .responsiveslideshow {
-    background-color: @color__slideshow--background;
     &__caption.caption {
         .gradient(fadeout(@color__slideshow-caption--background, 100%), fadeout(@color__slideshow-caption--background, 0%));
     }
@@ -152,25 +135,17 @@ form,
     }
     .button--pagination {
         background-color: @color__slideshow-pagination-item--background;
-        color: @color__slideshow-pagination-item--background--selected;
-        &:hover {
-            color: @color__slideshow-pagination-item--text--hover;
-        }
+        color: @color__slideshow-pagination-item--text;
     }
     .selected .button--pagination {
-        background-color: @slideshow__pagination-item-bg-color--selected;
-        color: @color__slideshow-title--text;
+        color: @color-swatch1;
     }
 }
 
-.twitter {
-	background-color: @color__twitter--background;
-	&__tweet-item {
-		background-color: @color__twitter-item--background;
-	}
-	&__account-link {
-		color: @color__twitter-account-name--background;
-	}
+.responsiveslideshow__next-button, 
+.responsiveslideshow__previous-button, 
+.responsiveslideshow__pause-toggle {
+	color: @color-swatch1!important;
 }
 
 .socialicons {
@@ -183,9 +158,7 @@ form,
 }
 
 .blogsearch {
-	background-color: @color__blogsearch--background;
 	&__legend.legend {
-		background-color: @color__blogsearch-legend--background;
 		color: @color__blogsearch-legend--text;
 	}
 	&__label.label {
@@ -194,29 +167,24 @@ form,
 }
 
 .blogpostlist {
-	background-color: @color__blogpostlist--background;
 	&__post-article {
 		background-color: @color__blogpostlist-article--background;
 	}
 	&__title-link {
-		background-color: @color__blogpostlist-title--background;
 		color: @color__blogpostlist-title--text;
 	}
 }
 
 .blogpost {
-	background-color:  @color__blogpost--background;
 	&__post-article {
 		background-color: @color__blogpost-article--background;
 	}
 	&__post-title {
-		background-color: @color__blogpost-title--background;
 		color: @color__blogpost-title--text;
 	}
 }
 
 .ecomproductslist {
-	background-color: @color__ecomproductslist--background;
 	&__product-filters {
 		background-color: @color__ecomproductslist-filters--background;
 	}
@@ -240,7 +208,6 @@ form,
 }
 
 .ecomproduct {
-	background-color: @color__ecomproduct--background;
 	&__image-link.image-link,
 	&__gallery-item.gallery-item {
 		background-color: @color__ecomproduct-images--background;
@@ -258,7 +225,6 @@ form,
 	}
 }
 .ecombasket {
-	background-color: @color__ecombasket--background;
 	&__basket-list {
 		background-color: @color__ecombasket-list--background;
 	}
@@ -267,24 +233,6 @@ form,
 		color: @color__ecombasket-button--text;
 		&:hover {
 			background-color: @color__ecombasket-button--background--hover;
-		}
-	}
-}
-
-.menusections {
-	background-color: @color__menusections--background;
-}
-
-.menu {
-	background-color: @color__menu--background;
-	.menu-item {
-		.item-image .image-link {
-			background-color: lighten(@color__menu-item--background, 3%);
-		}
-		&--featured {
-			.item-image .image-link {
-				background-color: lighten(@color__menu-section-featured--background, 2%);
-			}
 		}
 	}
 }
