--- a/less/variables.less
+++ b/less/variables.less
@@ -125,8 +125,7 @@ form,
 
 .responsiveslideshow {
     &__caption.caption {
-        .gradient(fadeout(@color__slideshow-caption--background, 100%), fadeout(@color__slideshow-caption--background, 0%));
-    }
+        background-color: @color__slideshow-caption--background;
     &__image-title.image-title {
         color: @color__slideshow-title--text;
     }
