--- a/less/variables.less
+++ b/less/variables.less
@@ -126,6 +126,7 @@ form,
 .responsiveslideshow {
     &__caption.caption {
         background-color: @color__slideshow-caption--background;
+    }
     &__image-title.image-title {
         color: @color__slideshow-title--text;
     }
