forms, twitter made transparent

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -172,6 +172,10 @@
     }
 }
 
+.ecomproductslist__product-item {
+    background-color: transparent;
+}
+
 .product-item {
     position: relative;
     width: 32%;
