--- a/less/plugins/plugin-menu.less
+++ b/less/plugins/plugin-menu.less
@@ -99,11 +99,6 @@
 
 
 // Featured Section
-.menu-section--featured, .menu-item--featured  {
-    border: 1px solid darken(@color-swatch7,2%);
-    padding: 5px;
-    background-color: @color-swatch1;
-}
 
 .menu-section--featured {
     padding: 20px;
@@ -124,7 +119,7 @@
     .menu__item-article {
         border: 1px solid darken(@color-swatch7,2%);
         padding: 20px;
-        background-color: @color-swatch1;
+        background-color: transparent;
     }
 }
 
