--- a/less/theme.less
+++ b/less/theme.less
@@ -104,7 +104,7 @@ blockquote:before {
 // ----------
 
 form, .form {
-    background-color: @color-swatch1;
+    background-color: transparent;
     border: 1px solid @color-swatch7;
     @media @tablet {
         text-align: center;
@@ -134,7 +134,7 @@ form, .form {
 legend { 
 	width: 100%;
 	padding: 30px 30px 0px;
-	background-color: @color-swatch1;
+	background-color: transparent;
 	color: @font-swatch4-color;
 	@media @mobile {
 		padding: 6px 20px;
