--- a/less/widgets.less
+++ b/less/widgets.less
@@ -841,7 +841,7 @@ input.input[type=search],
 
 // Body
 .widget__twitter {
-    background-color: @color-swatch1;
+    background-color: transparent;
     border: 1px solid @color-swatch7;
     padding: 30px 30px 5px;
     @media @tablet {
