--- a/less/plugins/plugin-menu.less
+++ b/less/plugins/plugin-menu.less
@@ -111,6 +111,7 @@
     .menu__item-title:after, 
     .menu__item-subtitle:after {
         border-top: 1px solid @color-swatch7;
+        background-color: transparent!important;
     }
 } 
 
@@ -119,7 +120,7 @@
     .menu__item-article {
         border: 1px solid darken(@color-swatch7,2%);
         padding: 20px;
-        background-color: transparent;
+        background-color: transparent!important;
     }
 }
 
