--- a/less/theme.less
+++ b/less/theme.less
@@ -173,6 +173,7 @@ textarea,
     border: 0;
     border-bottom: 1px solid @color-swatch7;
     webkit-appearance: none;
+    background-color: transparent;
     &:focus {
         border: 0;
         box-shadow: none;
@@ -182,7 +183,7 @@ textarea,
 }
 
 .signupform__label, .contactform__legend, .blogsearch__legend {
-    background-color: @color-swatch1;
+    background-color: transparent;
     border-bottom: 0;
     text-align: center;
     font-size: @font-swatch1-font-size;
