.ecomproductslist__product-item made transparent

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -172,10 +172,6 @@
     }
 }
 
-.ecomproductslist__product-item {
-    background-color: transparent;
-}
-
 .product-item {
     position: relative;
     width: 32%;
@@ -226,6 +222,10 @@
     -webkit-align-items: flex-start;
     -ms-flex-align: start;
     align-items: flex-start;
+}
+
+.ecomproductslist__product-item {
+    background-color: transparent!important;
 }
 
 // Featured Products
