form in footer made white

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -910,6 +910,9 @@ input.input[type=search],
 // -----------------------------
 
 .template-footer {
+    form {
+        background-color: @color-swatch1;
+    }
     .twitter {
         background-color: transparent;
         border: 0;
