--- a/less/widgets.less
+++ b/less/widgets.less
@@ -179,7 +179,7 @@
     content: "";
     margin-left: 4px;
     border: 5px solid transparent;
-    border-top-color: @color-swatch6;
+    border-top-color: transparent;
 }
 
 // Add Styles to Selected Li
