slideshow buttons given background colour

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -667,7 +667,11 @@
     background-color: @color-swatch3;
 }
 
-
+.responsiveslideshow__next-button, 
+.responsiveslideshow__previous-button, 
+.responsiveslideshow__pause-toggle {
+    background-color: @color-swatch3!important;
+}
 
 
 // -----------------------------
