form variable added

--- a/bk-v8-test.less
+++ b/bk-v8-test.less
@@ -33,3 +33,6 @@
 @color__feature-button--text:@color-swatch1;
 @color__feature-button--background:transparent;
 @color__feature-button--background--hover:@color__primary;
+
+@color__form--background:transparent;
+@color__form-legend--text:@color-swatch4;
