--- a/less/variables.less
+++ b/less/variables.less
@@ -88,3 +88,12 @@ button,
 		}
 	}
 }
+
+form,
+.form {
+	background-color: @color__form--background;
+	legend,
+	.legend {
+		color: @color__form-legend--text;
+	}
+}
