--- a/bk-v8-test.less
+++ b/bk-v8-test.less
@@ -21,11 +21,8 @@
 @color__footer--background:@color__primary;
 
 @color__navigation--text:@font-swatch6-color;
-@color__navigation--text--hover:@color__primary;
-@color__navigation--text--selected:@color__primary;
-@color__navigation-list--background:@color-swatch1;
-@color__navigation-item--text:@font-swatch6-color;
-@color__navigation-item--selected:@color__primary;
+@color__navigation--text--hover:@font-swatch6-color-hover;
+@color__navigation--text--selected:@font-swatch6-color-hover;
 
 @color__feature--background:@color-swatch4;
 @color__feature-headline--text:@font-swatch8-color;
@@ -36,3 +33,7 @@
 
 @color__form--background:transparent;
 @color__form-legend--text:@color-swatch4;
+
+@color__twitter--background:@color-swatch1;
+@color__twitter-item--background:@color-swatch1;
+@color__twitter-account-name--background:@color-swatch3;
