--- a/layout.twig
+++ b/layout.twig
@@ -22,8 +22,11 @@
 		<link rel="icon" href="{{ site.favicon['favicon'] }}" type="image/x-icon" />
 		<link rel="SHORTCUT ICON" href="{{ site.favicon['thumbnail'] }}?v={{ "now"|date("U") }}" type="image/x-icon" />
 	{% endif %}
+
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+
+	<script type="text/javascript" src="{{asset('js/jquery.js')}}"></script>
 
 	{% include basekit.headScript %}
 </head>
@@ -32,25 +35,13 @@
 	{% block content %}
 	{% endblock %}
 
-    {% include basekit.bodyScript %}
-
-
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="{{ asset('libs/jquery-1.10.2.min.js')}}"><\/script>')</script>
-
-    	<!-- Nav Menu Script -->
-        <script>
-            // Toggles class open to display/hide the whole navigation
-            $( ".navigation-toggle" ).click(function() {
-                $( ".bk-extendednavigation" ).toggleClass( "open" );
-            });
-            // Togglse class open to display/hide folders
-           // $( ".navigation-item.folder .item-name--parent" ).each(function() {
-           //      $( this ).click(function() {
-           //              $( this ).parent( ".navigation-item.folder" ).toggleClass( "open" );
-           //      });
-           //  });
-        </script>
+	<!-- Nav Menu Script -->
+    <script>
+        // Toggles class open to display/hide the whole navigation
+        $( ".navigation-toggle" ).click(function() {
+            $( ".bk-extendednavigation" ).toggleClass( "open" );
+        });
+    </script>
 
 </body>
 </html>
