--- a/stylesheet.less
+++ b/stylesheet.less
@@ -27,6 +27,7 @@
 @import "@{templateLocal}/less/widgets.less"; // Widgets
 @import "@{templateLocal}/less/mixins.less"; // Mixins
 @import "@{templateLocal}/less/navigation.less"; // Navigation
+@import "@{templateLocal}/less/video.less"; // Video
 
 // Plugin Includes
 @import "@{templateLocal}/less/plugins/plugin-blog.less"; // Plugin: Blog CSS
