--- a/layout.twig
+++ b/layout.twig
@@ -26,7 +26,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
-	<script type="text/javascript" src="{{asset('js/jquery.js')}}"></script>
+	<!-- Font Awesome Icons -->
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+	<!-- jQuery CDN -->
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 	{% include basekit.headScript %}
 </head>
