--- a/less/video.less
+++ b/less/video.less
@@ -44,6 +44,9 @@ html, body {
 
 // Example styling for content overlay of video
 .video-heading {
+	padding: 30px;
+
+	// Heading
 	h1 {
 		color: white;
 		font-size: 36px;
@@ -56,11 +59,13 @@ html, body {
 		}
 	}
 
+	// Subtitle
 	p {
 		color: rgba(255,255,255, 0.65);
 		letter-spacing: 1px;
 	}
 
+	// Button
 	.button {
 		border-color: white;
 		color: white;
@@ -72,8 +77,8 @@ html, body {
 	@media @mobile {
 
 		// Moves video content overlay to the bottom of the slideshow on mobile
-		position: absolute;
-		bottom: 25px;
+		position: absolute!important;
+		bottom: 30px;
 		left: 20px;
 		right: 20px;
 	}
@@ -82,8 +87,11 @@ html, body {
 
 // Makes sure the content and button widget don't wrap inline whole keeping them central
 .video-heading [data-widget-type="content"], 
-.video-heading[data-widget-type="button"] {
+.video-heading [data-widget-type="button"] {
+
+	// Changes alignment of heading and button within video
 	text-align: center;
+
     width: 100%;
 }
 
@@ -117,9 +125,99 @@ html, body {
 	background-color: rgba(0,0,0, 0.25);
 
 	color: white;
-	padding: 20px 30px;
+	padding: 0;
 	bottom: 0;
 	right: 0;
+
+	// Hides the controls at mobile as the video is not active
+	@media @mobile {
+		display: none;
+		visibility: hidden;
+	}
+}
+
+
+// YouTube control icons
+.mb_YTVP {
+	&Playpause i:after,
+	&Playpause span:after,
+	&MuteUnmute i:after,
+	&MuteUnmute span:after,
+	&Url:after {
+		color: white;
+		line-height: 60px;
+		font-family: FontAwesome;
+		font-size: 20px;
+		font-style: normal;
+		font-weight: normal;
+		text-rendering: geometricPrecision;
+		-webkit-font-smoothing: antialiased;
+	}
+
+	// Play button
+	&Playpause  {
+		background-color: rgba(0,0,0, 0.25);
+		display: inline-block;
+		margin-right: 12px;
+    	height: 60px;
+		width: 75px;
+		text-align: center;
+
+		// Icon
+		i:after {
+			content: "\f04b";
+			font-size: 17px;
+		}
+	}
+
+	// Pause button
+	&Playpause span:after {
+		content: "\f04c";
+		font-size: 17px;
+	}
+
+	// Mute button
+	&MuteUnmute i:after {
+		content: "\f028";
+	}
+
+	// Unmute button
+	&MuteUnmute span:after {
+		content: "\f026";
+	}
+
+	// Hide video timer
+	&Time {
+		display: none;
+	}
+
+	// YouTube icon
+	&Url:after {
+		content: "\f16a";
+	}
+}
+
+// Adds padding to all icons except play / pause
+.mb_YTVPMuteUnmute,
+.mb_YTVPUrl,
+.mb_OnlyYT {
+	padding: 0 10px;
+}
+
+// Fullscreen icon
+.mb_OnlyYT {
+
+	// Adds extra padding to the last icon
+	padding-right: 20px;
+
+	&:after {
+		content: "\f065";
+		font-family: FontAwesome;
+		font-size: 18px;
+		font-weight: normal;
+		text-rendering: geometricPrecision;
+		-webkit-font-smoothing: antialiased;
+	}
 }
 
 
