Added bodyscript to layout.

--- a/layout.twig
+++ b/layout.twig
@@ -36,6 +36,8 @@
 </head>
 <body class="{{ page.backgroundClass }}">
 
+	{% include basekit.bodyScript %}
+	
 	{% block content %}
 	{% endblock %}
 
