--- a/default.twig
+++ b/default.twig
@@ -3,16 +3,10 @@
 {% block content %}
 
 {% include "includes/header.twig" %}
+
+{% include "includes/video.twig" %}
+
 <div class="bk-pt-default">
-	<div class="default-feature">
-		{{widget('feature', 'featuredefault', {
-			"header": "profile", 
-			"defaultBgImg": asset('images/feature-default.jpg'),
-			'positionTopPercentage': '0',
-			'showBtn': false,
-			buttonText: "Lorem Ipsum"
-		})|raw}}
-	</div>
 	
 	<!-- Container -->
 	<div class="container">
