--- a/includes/video.twig
+++ b/includes/video.twig
@@ -30,7 +30,7 @@
 		"{{asset('images/background1.jpg')}}",
 		"{{asset('images/background2.jpg')}}",
 		"{{asset('images/background3.jpg')}}",
-		"{{asset('images/background4.jpg')}}",
+		"{{asset('images/background4.jpg')}}"
 	];
 
 	// Sets fade time for mobile slideshow
