more variables test

--- a/less/variables.less
+++ b/less/variables.less
@@ -87,11 +87,18 @@ form,
 	.legend {
 		color: @color__form-legend--text;
 	}
+	label,
+	.label {
+		color: @color__form-label--text;
+	}
 }
 
 .twitter {
 	background-color: @color__twitter--background;
 	&__tweet-item {
 		background-color: @color__twitter-item--background;
+	}
+	&__account-link {
+		color: @color__twitter-account-name--text;
 	}
 }
