--- a/bk-v8-test.less
+++ b/bk-v8-test.less
@@ -33,6 +33,7 @@
 
 @color__form--background:transparent;
 @color__form-legend--text:@color-swatch4;
+@color__form-label--text:@font-swatch5-color;
 
 @color__twitter--background:@color-swatch1;
 @color__twitter-item--background:@color-swatch1;
