font conversions done

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -52,7 +52,7 @@
 
 .navigation-item.folder .navigation__item-name {
 	&:hover {
-		color: @font-swatch4-color;
+		color: @color__h4--text;
 	}
 }
 
@@ -91,7 +91,7 @@
 	border: 1px solid @color-swatch7;
     white-space: normal;
 	.navigation__item-name {
-		color:@font-swatch9-color;
+		color:@color__feature-strapline--text;
 	}
 	@media @tablet {
 		position: relative;
