--- a/less/theme.less
+++ b/less/theme.less
@@ -29,14 +29,14 @@
 	min-height: 80px;
 	background-color: @color-swatch3;
 	text-align: center;
-	color: @font-swatch9-color;
+	color: @color__feature-strapline--text;
 	// Change heading elements to white
 	h1, h2, h3, h4 {
-		color: @font-swatch9-color;
+		color: @color__feature-strapline--text;
 	}
 	// Lighten paragraph & link elements
 	p, a {
-		color: @font-swatch9-color;
+		color: @color__feature-strapline--text;
 		padding: 0;
 	}
 	// Reset Twitter feed styles
@@ -135,7 +135,7 @@ legend {
 	width: 100%;
 	padding: 30px 30px 0px;
 	background-color: transparent;
-	color: @font-swatch4-color;
+	color: @color__h4--text;
 	@media @mobile {
 		padding: 6px 20px;
 	}
@@ -248,6 +248,6 @@ textarea,
 .image-widget__caption { margin: 10px 0; }
 .image-widget__image-title,
 .image-widget__image-description {
-	color: @font-swatch5-color;
+	color: @color__p--text;
 	text-shadow: none;
 }
