--- a/less/widgets.less
+++ b/less/widgets.less
@@ -185,7 +185,7 @@
 // Add Styles to Selected Li
 .extendednavigation li.selected {
     a, .text {
-        color: @font-swatch6-color-hover;
+        color: @color__navigation--text-hover;
     }
 }
 
@@ -273,7 +273,7 @@
 .feature__button { 
     margin: 10px 0 0 0; 
     border: 1px solid @color-swatch1;
-    color: @font-swatch8-color;
+    color: @color__feature-headline--text;
 }
 
 // Default Page Feature
@@ -309,14 +309,14 @@
 
 .imagewidget__image-title,
 .imagewidget__image-description {
-    color: @font-swatch4-color;
+    color: @color__h4--text;
     font-size: @font-swatch4-font-size;
     line-height: @font-swatch4-line-height;
     text-shadow: none;
 }
 
 .imagewidget__image-description {
-    color: @font-swatch5-color;
+    color: @color__p--text;
     font-size: @font-swatch5-font-size;
     line-height: @font-swatch5-line-height;
 }
@@ -362,7 +362,7 @@
         font-size:@font-swatch9-font-size;
         font-weight: @font-swatch9-font-weight;
         line-height:@font-swatch9-line-height;
-        color: @font-swatch9-color;
+        color: @color__feature-strapline--text;
         letter-spacing: @font-swatch9-letter-spacing;
     }
     .image-description {
@@ -370,7 +370,7 @@
         font-size:@font-swatch5-font-size;
         font-weight: @font-swatch5-font-weight;
         line-height:@font-swatch5-line-height;
-        color: @font-swatch9-color;
+        color: @color__feature-strapline--text;
         letter-spacing: @font-swatch5-letter-spacing;
     }
 }
@@ -530,7 +530,7 @@
     margin: 0;
     .image-title, 
     .image-description {
-        color: @font-swatch8-color;
+        color: @color__feature-headline--text;
         text-shadow: none;
     }
     .image-title {
@@ -685,14 +685,14 @@ button, .button {
     padding: 8px 30px;
     background-color: transparent;
     border: 1px solid @color-swatch4;
-    color: @font-swatch7-color;
+    color: @color__button--text;
 }
 
 .feature__button {
     border: 1px solid @color-swatch1;
     background-color: transparent;
     padding: 8px 30px;
-    color: @font-swatch9-color;
+    color: @color__feature-strapline--text;
         margin: 10px 0 0 0; 
     &:hover {
         border: 1px solid transparent;
@@ -718,7 +718,7 @@ button, .button {
 
 .phone-number-link {
     @media @mobile {
-        color: @font-swatch9-color;
+        color: @color__feature-strapline--text;
         background-color: @color-swatch3;
     }
 }
@@ -824,7 +824,7 @@ input.input[type=search],
 }
 
 .socialicons__social-item a:hover {
-    color: @font-swatch9-color;
+    color: @color__feature-strapline--text;
     text-decoration: none;
 }
 
@@ -833,7 +833,7 @@ input.input[type=search],
     border: 1px solid @color-swatch4;
     padding: 10px;
     display: inline-block;
-    color: @font-swatch4-color;
+    color: @color__h4--text;
 }
 
 
@@ -938,7 +938,7 @@ input.input[type=search],
     }
     .signupform__label {
         padding: 0;
-        color: @font-swatch4-color;
+        color: @color__h4--text;
         font-size: @font-swatch3-font-size;
         &:after {
             margin: 10px auto 10px;
@@ -967,7 +967,7 @@ input.input[type=search],
     input.input[type=email], 
     input.input[type=search], 
     .contact-form__textarea {
-        color: @font-swatch5-color;
+        color: @color__p--text;
     }
 }
 
