--- a/bk-v8-test.less
+++ b/bk-v8-test.less
@@ -3,37 +3,37 @@
 
 @color__body--background:@color-swatch1;
 @color__link--text:@color-swatch2;
-@color__companyname--text:@font-swatch10-color;
+@color__companyname--text:@color__companyname--text;
 
-@color__h1--text:@font-swatch1-color;
-@color__h2--text:@font-swatch2-color;
-@color__h3--text:@font-swatch3-color;
-@color__h4--text:@font-swatch4-color;
-@color__p--text:@font-swatch5-color;
+@color__h1--text:@color__h1--text;
+@color__h2--text:@color__h2--text;
+@color__h3--text:@color__h3--text;
+@color__h4--text:@color__h4--text;
+@color__p--text:@color__p--text;
 
 @color__button--background:transparent;
 @color__button--background--hover:@color__primary;
-@color__button--text:@font-swatch7-color;
+@color__button--text:@color__button--text;
 @color__button--text--hover:@color-swatch1;
 
 @color__header--background:@color-swatch1;
 
 @color__footer--background:@color__primary;
 
-@color__navigation--text:@font-swatch6-color;
-@color__navigation--text--hover:@font-swatch6-color-hover;
-@color__navigation--text--selected:@font-swatch6-color-hover;
+@color__navigation--text:@color__navigation--text;
+@color__navigation--text--hover:@color__navigation--text-hover;
+@color__navigation--text--selected:@color__navigation--text-hover;
 
 @color__feature--background:@color-swatch4;
-@color__feature-headline--text:@font-swatch8-color;
-@color__feature-strapline--text:@font-swatch9-color;
+@color__feature-headline--text:@color__feature-headline--text;
+@color__feature-strapline--text:@color__feature-strapline--text;
 @color__feature-button--text:@color-swatch1;
 @color__feature-button--background:transparent;
 @color__feature-button--background--hover:@color__primary;
 
 @color__form--background:transparent;
 @color__form-legend--text:@color-swatch4;
-@color__form-label--text:@font-swatch5-color;
+@color__form-label--text:@color__p--text;
 
 @color__twitter--background:@color-swatch1;
 @color__twitter-item--background:@color-swatch1;
