--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -122,7 +122,7 @@
 
 .blogpost__post-attributes a,
 .blogpostlist__post-excerpt a {
-	color: lighten(@font-swatch5-color,20%);
+	color: lighten(@color__p--text,20%);
 }
 
 .blogpost__post-article {
