--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -236,7 +236,7 @@
 
 .listing-pagination .pagination-item.current a {
     background-color: @color-swatch3;
-    color: @font-swatch9-color;
+    color: @color__feature-strapline--text;
 }
 
 // -----------------------------
