change paragraph text

--- a/less/theme.less
+++ b/less/theme.less
@@ -136,6 +136,7 @@ legend {
 	padding: 30px 30px 0px;
 	background-color: @color-swatch1;
 	color: @font-swatch4-color;
+    font-family: @font-swatch4-font-family;
 	@media @mobile {
 		padding: 6px 20px;
 	}
@@ -187,6 +188,7 @@ textarea,
     text-align: center;
     font-size: @font-swatch1-font-size;
     font-weight: @font-swatch1-font-weight;
+    font-family: @font-swatch4-font-family;
     padding: 30px 0 0;
     @media @tablet {
         padding: 30px 0 20px;
