--- a/less/widgets.less
+++ b/less/widgets.less
@@ -104,6 +104,7 @@
 }
 
 .company-link {
+    vertical-align: top;
     @media @tablet {
         font-size: bkscale(@font-swatch10-font-size,0.8);
         line-height: bkscale(@font-swatch10-line-height,0.8);
