site creation styling

--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -64,7 +64,11 @@
 }
 
 .blogpostlist__image-link {
-  margin: 25px 25px 0;
+    margin: 25px 25px 0;
+}
+
+.post-image .image {
+    max-height: 100%;
 }
 
 // Blog Post List Footer
