--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -351,9 +351,15 @@
 }
 
 .ecomproductslist__legend {
-    padding: 10px 0 10px;
-    border-bottom: 1px solid @color-swatch7;
-    border-top: 1px solid @color-swatch7;
+    display: none;
+}
+
+.ecomproductslist__form-body {
+    margin: 0;
+}
+
+.listing-order {
+    padding: 0px 0 20px;
 }
 
 .ecomproductslist__fieldset--search .ecomproductslist__legend {
