--- a/less/widgets.less
+++ b/less/widgets.less
@@ -267,6 +267,11 @@
     }
 }
 
+.bk-pt-default .feature__headline {
+    font-size: bkscale(@font-swatch8-font-size,0.8);
+    line-height: bkscale(@font-swatch8-line-height,0.9);
+}
+
 
 // Feature Button
 // ---------------
