--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -346,8 +346,7 @@
 }
 
 .ecomproductslist__fieldset--filters {
-    float:left;
-    width: 60%;
+    text-align: center;
     @media @tablet {
         width:100%;
     }
@@ -415,13 +414,6 @@
 .ecomproductslist__form-group {
     @media @tablet {
         width: 100%;
-    }
-}
-
-.ecomproductslist__form-group:nth-child(1) {
-    float: right;
-    @media @tablet {
-        float: initial;
     }
 }
 
