product list margin top added

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -60,10 +60,6 @@
     }
 }
 
-.product-item-details {
-    margin: 20px 0px;
-}
-
 .ecomproductslist__listing-title,
 .ecombasketsummary__summary-title,
 .ecomproduct__product-title,
@@ -172,6 +168,11 @@
 
 // Product Item
 
+.product-item-image .image-link,
+.product-image .image-link {
+    background-color: @color-swatch1;
+}
+
 .title-link {
     &:hover {
         text-decoration: none;
@@ -196,7 +197,7 @@
 
 .product-item-details {
     text-align: center;
-    margin-top: 0;
+    margin-top: 20px;
 }
 
 .product-list {
