--- a/less/theme.less
+++ b/less/theme.less
@@ -136,6 +136,7 @@ legend {
 	padding: 30px 30px 0px;
 	background-color: transparent;
 	color: @color__h4--text;
+    font-family: @font__h4--font-family;
 	@media @mobile {
 		padding: 6px 20px;
 	}
@@ -186,8 +187,9 @@ textarea,
     background-color: transparent;
     border-bottom: 0;
     text-align: center;
-    font-size: @font-swatch1-font-size;
-    font-weight: @font-swatch1-font-weight;
+    font-size: @font__h1--font-size;
+    font-weight: @font__h1--font-weight;
+    font-family: @font__h4--font-family;
     padding: 30px 0 0;
     @media @tablet {
         padding: 30px 0 20px;
